day-14/k8s/services.yaml
# ========== AUTH SERVICE ==========
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: devops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: auth-service:1.0
        imagePullPolicy: Never
        ports:
        - containerPort: 3001
        livenessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 30
          periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: devops-app
spec:
  selector:
    app: auth-service
  type: ClusterIP
  ports:
  - port: 3001
    targetPort: 3001

---

# ========== PRODUCT SERVICE ==========
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: devops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - name: product-service
        image: product-service:1.0
        imagePullPolicy: Never
        ports:
        - containerPort: 3002
        livenessProbe:
          httpGet:
            path: /health
            port: 3002
          initialDelaySeconds: 30
          periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: devops-app
spec:
  selector:
    app: product-service
  type: ClusterIP
  ports:
  - port: 3002
    targetPort: 3002

---

# ========== ORDER SERVICE ==========
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: devops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: order-service:1.0
        imagePullPolicy: Never
        ports:
        - containerPort: 3003
        livenessProbe:
          httpGet:
            path: /health
            port: 3003
          initialDelaySeconds: 30
          periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: devops-app
spec:
  selector:
    app: order-service
  type: ClusterIP
  ports:
  - port: 3003
    targetPort: 3003
